tests/cases/smoke/invalid/expr_negative_index.dp
var items: int[] = [1, 2, 3]
var last = items[-1]
